--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
     <link
       rel="icon"
       type="image/png"
@@ -16,26 +15,15 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/assets/styles.css" />
+    <link rel="stylesheet" href="src/assets/css/main.css" />
 
     <title>Frontend Mentor | QR code component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <div class="container">
       <div class="card">
         <img src="src/assets/images/image-qr-code.png" alt="" />
-        <div class="text">
+        <div class="card__text">
           <h2>Improve your front-end skills by building projects</h2>
           <p>
             Scan the QR code to visit Frontend Mentor and take your coding
